Bug 101109 - [IGT] [SKL/BDW/IVB/KBL] kms_mmap_write_crc test assertion failure
Summary: [IGT] [SKL/BDW/IVB/KBL] kms_mmap_write_crc test assertion failure
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Maarten Lankhorst
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-19 20:42 UTC by Humberto Israel Perez Rodriguez
Modified: 2017-08-16 06:52 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, IVB, SKL
i915 features: display/Other


Attachments
dmesg.log (50.18 KB, text/plain)
2017-05-19 20:42 UTC, Humberto Israel Perez Rodriguez
no flags Details

Description Humberto Israel Perez Rodriguez 2017-05-19 20:42:01 UTC
Created attachment 131419 [details]
dmesg.log

Hi, the following test case fail on SKL with latest configuration

Test case
======================================
igt@kms_mmap_write_crc


output
======================================
IGT-Version: 1.18-g49e083a (x86_64) (Linux: 4.12.0-rc1-drm-tip-ww20-commit-8b4cdc6+ x86_64)
(kms_mmap_write_crc:2140) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(kms_mmap_write_crc:2140) drmtest-DEBUG: Test requirement passed: !(fd<0)
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) drmtest-DEBUG: Test requirement passed: drmSetMaster(fd) == 0
(kms_mmap_write_crc:2140) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: init {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 48 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 53 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 57 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
Using 10 rounds for the test
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: HDMI-A-1: set_pipe(A)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 48 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: HDMI-A-1: Selecting pipe A
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(59)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 59, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe A, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe A, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCrtc pipe B, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe B, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe B, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCrtc pipe C, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe C, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe C, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Using generic frame CRC ABI
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=7680)
(kms_mmap_write_crc:2140) DEBUG: Test requirement passed: !(dma_buf_fd == -1 && errno == EINVAL)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(59)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 59, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: Test assertion failure function igt_assert_crc_equal, file igt_debugfs.c:305:
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: Failed assertion: a->crc[i] == b->crc[i]
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: error: 0x5aa69981 != 0x40e7392
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [igt_assert_crc_equal+0x6c]
  #2 [main+0x456]
  #3 [__libc_start_main+0xf1]
  #4 [_start+0x2a]
  #5 [<unknown>+0x2a]
Test kms_mmap_write_crc failed.
**** DEBUG ****
(kms_mmap_write_crc:2140) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(kms_mmap_write_crc:2140) drmtest-DEBUG: Test requirement passed: !(fd<0)
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) drmtest-DEBUG: Test requirement passed: drmSetMaster(fd) == 0
(kms_mmap_write_crc:2140) igt-kms-DEBUG: VT: graphics mode set (mode was 0x0)
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: init {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 48 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 53 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 57 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) INFO: Using 10 rounds for the test
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: HDMI-A-1: set_pipe(A)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: Setting Broadcast RGB mode on connector 48 to 1
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: HDMI-A-1: Selecting pipe A
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(59)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 59, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe A, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe A, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCrtc pipe B, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe B, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe B, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCrtc pipe C, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetPlane pipe C, plane 1, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     SetCursor pipe C, disabling
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(kms_mmap_write_crc:2140) igt-debugfs-DEBUG: Using generic frame CRC ABI
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258, tiling=0x0, size=0)
(kms_mmap_write_crc:2140) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=7680)
(kms_mmap_write_crc:2140) DEBUG: Test requirement passed: !(dma_buf_fd == -1 && errno == EINVAL)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(59)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 59, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: A.0: plane_set_fb(92)
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: commit {
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display:     HDMI-A-1: SetCrtc pipe A, fb 92, src (0, 0), mode 1920x1080
(kms_mmap_write_crc:2140) igt-kms-DEBUG: display: }
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: Test assertion failure function igt_assert_crc_equal, file igt_debugfs.c:305:
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: Failed assertion: a->crc[i] == b->crc[i]
(kms_mmap_write_crc:2140) igt-debugfs-CRITICAL: error: 0x5aa69981 != 0x40e7392

======================================
             Software
======================================
kernel version              : 4.12.0-rc1-drm-tip-ww20-commit-8b4cdc6+
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
bios release date           : 05/27/2016

======================================
        Graphic drivers
======================================
Component: drm
    tag: libdrm-2.4.80-11-ga2fa2e0
    commit: a2fa2e08692483cf9f4d06caa6e0f0add59e3343

Component: cairo
    tag: 1.15.4-21-g9d44136
    commit: 9d44136ef8e2a1ad2c6631beb4bbdaeed7a2dad8

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-173-g93215b0
    commit: 93215b00db06ba568c34a6cad194f4749bbfbc9d

Component: piglit
    tag: piglit-v1
    commit: 7352f4a98a23eae1201bfc4a0121d9c3a969d23f

======================================
             Hardware
======================================
platform                   : SKL-Nuc
motherboard id             : NUC6i5SYB
form factor                : Desktop
cpu family                 : Core i5
cpu family id              : 6
cpu information            : Intel(R) Core(TM) i5-6260U CPU @ 1.80GHz
gpu card                   : Intel Corporation Iris Graphics 540 (rev 0a) (prog-if 00 [VGA controller])
memory ram                 : 15.58 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 78
cpu stepping               : 3
signature                  : Type 0, Family 6, Model 78, Stepping 3
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : HDMI-A-1 DP-1

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.26
guc fw loaded             : NONE
guc version wanted        : 0.0
guc version found         : 0.0
Comment 1 Humberto Israel Perez Rodriguez 2017-05-30 21:25:02 UTC
same issue on BDW with latest configuration

igt@kms_mmap_write_crc



Component: drm
    tag: libdrm-2.4.80-18-gce9e3ba
    commit: ce9e3ba6e2cc65e1e9e6e05a5f326c4dd25ab2c4

Component: cairo
    tag: 1.15.4-22-g0fd0fd0
    commit: 0fd0fd0ae9ad8cfb177bb844091de98c0235917e

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.18-211-g00ce341
    commit: 00ce341b95c718611689ded8ccec45086186c5b7

Component: piglit
    tag: piglit-v1
    commit: ebbb9c5dcc6a637884d54e06eb430a8c14993413

	
Kernel version
=========================================
commit 75397b60fe84eb5125a78a5ee304def86b761994
Author:     Chris Wilson <chris@chris-wilson.co.uk>
AuthorDate: Tue May 30 12:56:32 2017 +0100
Commit:     Chris Wilson <chris@chris-wilson.co.uk>
CommitDate: Tue May 30 12:56:32 2017 +0100

    drm-tip: 2017y-05m-30d-11h-55m-42s UTC integration manifest
Comment 2 Elizabeth 2017-06-20 16:51:33 UTC
Adding tag into "Whiteboard" field - ReadyForDev
*Status is correct
*Platform is included
*Feature is included
*Priority and Severity correctly set
*Logs included
Comment 3 Armando Antonio 2017-07-06 14:12:05 UTC
The following test fail on IVB with latest configuration

====================================================
Test list
====================================================
igt@kms_mmap_write_crc


Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-24-g3095cc8
    commit: 3095cc8eaba1aa87ad38c04ae2b1eabe30f7e16c
Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51
Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-57-g6fcc8e8
    commit: 6fcc8e8b247661c7950b998e0b95141ffbd6b833
Component: piglit
    tag: piglit-v1
    commit: c8f4fd9eeb298a2ef0855927f22634f794ef3eff
======================================
             Hardware
======================================
platform                   : Ivy Bridge
motherboard model          : Inspiron660
motherboard id             : 0XR1GT
form factor                : Desktop
manufacturer               : DellInc.
cpu family                 : Core i5
cpu family id              : 6
cpu information            : Intel(R) Core(TM) i5-3330 CPU @ 3.00GHz
gpu card                   : Intel Corporation Xeon E3-1200 v2/3rd Gen Core processor Graphics Controller (rev 09) (prog-if 00 [VGA controller])
memory ram                 : 7.7 GB
max memory ram             : 8 GB
cpu thread                 : 4
cpu core                   : 4
cpu model                  : 58
cpu stepping               : 9
socket                     : Socket BGA1155
signature                  : Type 0, Family 6, Model 58, Stepping 9
hard drive                 : 74GiB (80GB)
current cd clock frequency : 400000 kHz
maximum cd clock frequency : 400000 kHz
displays connected         : VGA-1 HDMI-A-1
Comment 4 Ricardo Madrigal 2017-07-10 14:56:33 UTC
The following test fail on KBL  with latest configuration

Test list
====================================================
igt@kms_mmap_write_crc
==================================================

====================================================
Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-24-g3095cc8
    commit: 3095cc8eaba1aa87ad38c04ae2b1eabe30f7e16c
Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51
Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-57-g6fcc8e8
    commit: 6fcc8e8b247661c7950b998e0b95141ffbd6b833
Component: piglit
    tag: piglit-v1
    commit: c8f4fd9eeb298a2ef0855927f22634f794ef3eff

======================================
             Hardware
======================================
motherboard id             : NUC7i5BNB
form factor                : Desktop
cpu family                 : Core i5
cpu family id              : 6
cpu information            : Intel(R) Core(TM) i5-7260U CPU @ 2.20GHz
gpu card                   : Intel Corporation Device 5926 (rev 06) (prog-if 00 [VGA controller])
memory ram                 : 15.58 GB
max memory ram             : 32 GB
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 142
cpu stepping               : 9
socket                     : Other
signature                  : Type 0, Family 6, Model 142, Stepping 9
hard drive                 : 111GiB (120GB)
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 675000 kHz
displays connected         : DP-1
Comment 5 maria guadalupe 2017-07-12 16:31:05 UTC
issue is still present over BDW with the following configuration 

test
=====================================
igt@kms_mmap_write_crc

 Software
======================================
kernel version              : 4.12.0-drm-tip-ww28-commit-f1619bb+
architecture                : x86_64
os version                  : Ubuntu 16.10
os codename                 : yakkety
kernel driver               : i915
bios revision               : 5.6
hardware acceleration       : disabled
swap partition              : enabled on (/dev/sda3)

======================================
        Graphic drivers
======================================
modesetting                 : enabled
modesetting compiled for    : 1.18.4 X.Org Video Driver
xorg-xserver                : 1.18.4
libdrm                      : 2.4.70
libva                       : 1.7.1-2
vaapi (intel-driver)        : 1.7.1
cairo                       : 1.14.6-1build1
intel-gpu-tools             : 1.16-1

======================================
             Hardware
======================================
platform                   : Broadwell
motherboard id             : NUC5i5MYBE
form factor                : Desktop
cpu family                 : Core i5
cpu information            : Intel(R) Core(TM) i5-5300U CPU @ 2.30GHz
gpu card                   : Intel Corporation HD Graphics 5500 (rev 09) (prog-if 00 [VGA controller])
memory ram                 : 11.62 GB
max memory ram             : 16 GB
signature                  : Type 0, Family 6, Model 61, Stepping 4
hard drive                 : 111GiB (120GB)
current cd clock frequency : 337500 kHz
maximum cd clock frequency : 540000 kHz
displays connected         : DP-1 DP-2
Comment 6 Hector Velazquez 2017-07-26 19:43:10 UTC
The following test FAIL on IVB with this commit

Tests List:

igt@kms_mmap_write_crc


This is my configuration:

====================================================
Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-33-g3876bc2
    commit: 3876bc246a07070a6043159cd7623d4def9bbd4c

Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-112-g493151b
    commit: 493151b0768aa4ca535cef49cb7efa174a9c3a77

Component: piglit
    tag: piglit-v1
    commit: 973892687cf5c2f8e2dbe1d22998b82736643787
Comment 8 Marta Löfstedt 2017-08-10 10:00:50 UTC
If add add looong sleep after prime_sync_end(dmabuf->fd, true);
the test pass.
Comment 9 Maarten Lankhorst 2017-08-10 12:54:31 UTC
Patch on mailing list..

[PATCH i-g-t] tests/kms_mmap_write_crc: Add drmModeDirtyFB after dirtying fb
Comment 10 Marta Löfstedt 2017-08-10 13:06:27 UTC
(In reply to Maarten Lankhorst from comment #9)
> Patch on mailing list..
> 
> [PATCH i-g-t] tests/kms_mmap_write_crc: Add drmModeDirtyFB after dirtying fb

Tested with Maartens patch, but unfortunately the test still fails
Comment 11 Maarten Lankhorst 2017-08-10 18:06:50 UTC
https://patchwork.freedesktop.org/patch/171315/

This fix + igt fix above should fix this test. Does the patchwork patch fix the kms_pwrite_crc too?
Comment 12 Marta Löfstedt 2017-08-11 13:13:55 UTC
(In reply to Maarten Lankhorst from comment #11)
> https://patchwork.freedesktop.org/patch/171315/
> 
> This fix + igt fix above should fix this test. Does the patchwork patch fix
> the kms_pwrite_crc too?

kms_pwrite_crc is also fixed by above patches.
Comment 13 Chris Wilson 2017-08-15 15:04:02 UTC
commit b8f55be64453ea77fc51bff6cd0d906d18ce1cd2
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Aug 11 12:11:16 2017 +0100

    drm/i915: Split obj->cache_coherent to track r/w
    
    Another month, another story in the cache coherency saga. This time, we
    come to the realisation that i915_gem_object_is_coherent() has been
    reporting whether we can read from the target without requiring a cache
    invalidate; but we were using it in places for testing whether we could
    write into the object without requiring a cache flush. So split the
    tracking into two, one to decide before reads, one after writes.
    
    See commit e27ab73d17ef ("drm/i915: Mark CPU cache as dirty on every
    transition for CPU writes") for the previous entry in this saga.
Comment 14 Maarten Lankhorst 2017-08-15 18:19:58 UTC
And the bug in the testcase:

commit eda8cc9f5f61e84d72615e470030ff3c3271af71
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Thu Aug 10 14:09:14 2017 +0200

    tests/kms_mmap_write_crc: Add drmModeDirtyFB after dirtying fb
Comment 15 Marta Löfstedt 2017-08-16 06:52:25 UTC
Thanks Chris and Maarten I can no longer reproduce the issue on my BDW NUCi5.
This is also reflected on the shards now passing the test from CI_DRM_2968: 
https://intel-gfx-ci.01.org/tree/drm-tip/shards-all.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.